--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteBase /
+RewriteBase /a/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php/$1 [L,QSA]
