--- a/webapp/music-career-day/.htaccess
+++ b/webapp/music-career-day/.htaccess
@@ -1,9 +1,3 @@
-php_value auto_prepend_file none
-php_value auto_append_file none
-php_flag magic_quotes_gpc off
-
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.*) index.php/$1 [L,QSA]
-RewriteRule ^$ index.php/ [L,QSA]
+RewriteBase /webapp/music-career-day/
+RewriteRule ^ /app/festivals/music-career-day/ [R=301]
