--- a/webapp/anecf/.htaccess
+++ b/webapp/anecf/.htaccess
@@ -1,2 +1,2 @@
-php_value auto_prepend_file /web/pscpages/webapp/anecf/common.php
+php_value auto_prepend_file ./common.php
 php_value auto_append_file none
