--- a/webapp/festivals/woodwind/.htaccess
+++ b/webapp/festivals/woodwind/.htaccess
@@ -3,6 +3,7 @@ php_value auto_append_file none
 php_flag magic_quotes_gpc off
 
 RewriteEngine on
+RewriteBase /webapp/festivals/woodwind/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php/$1 [L,QSA]
