--- a/webapp/.htaccess
+++ b/webapp/.htaccess
@@ -1,1 +1,6 @@
 php_flag register_globals off
+
+RewriteEngine on
+RewriteCond %{REQUEST_URI} /secure/
+RewriteCond %{REQUEST_URI} !\.(htm|html|php)$
+RewriteRule ^(.*) /webapp/binary.php [L,QSA]
