--- a/webapp/support/.htaccess
+++ b/webapp/support/.htaccess
@@ -4,7 +4,7 @@ php_value auto_append_file none
 AddDefaultCharset utf-8
 
 RewriteEngine on
-
+RewriteBase /webapp/support/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.html/$1 [L,QSA]
