Fallback on config.ini for PSU::isdev()
See #106

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -8,6 +8,11 @@ webapp_url = "https://www.plymouth.edu/webapp"
 tmp_dir = "/web/temp"
 uploads_dir = "/web/uploads"
 
+;[environment]
+
+; development or production server
+;dev = 1
+
 ;[cdn]
 ;enabled = 1
 
