--- a/webapp/psu-mobile/.htaccess
+++ b/webapp/psu-mobile/.htaccess
@@ -2,6 +2,7 @@ php_value auto_prepend_file none
 php_value auto_append_file none
 
 RewriteEngine on
+RewriteBase /webapp/psu-mobile/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php/$1 [L,QSA]
