Fixup remote-files to work in webapp

--- a/webapp/remote-files/Makefile
+++ b/webapp/remote-files/Makefile
@@ -1,13 +1,7 @@
-APP_PATH = rf
-SIMPLESUB = .htaccess common.php css/style.css
-
 .PHONY: all clean
 
-all: $(SIMPLESUB) css/style.css
-	$(MAKE) APP_PATH=$(APP_PATH) -C js
+all:
+	$(MAKE) -C js
 
 clean:
-	-rm -f $(SIMPLESUB) js/swfupload.min.js
-
-%: %.in
-	sed "s/%APP_PATH%/$(APP_PATH)/" < $< > $@
+	$(MAKE) -C js clean
