--- a/webapp/remote-files/.htaccess
+++ b/webapp/remote-files/.htaccess
@@ -2,9 +2,7 @@
 # do not edit .htaccess. edit .htaccess.in, and run `make` when you're done.
 #
 
-php_value include_path ".:/usr/local/lib/php:/web/includes_psu:/web/includes_external:/web/pscpages/includes:/usr/local/server/apache/conf/admin"
-
-php_value auto_prepend_file /web/%APP_PATH%/common.php
+php_value auto_prepend_file ./common.php
 php_value auto_append_file none
 
 php_value upload_max_filesize 100M
@@ -15,7 +13,7 @@ php_value memory_limit 64M
 Options -MultiViews -Indexes
 
 RewriteEngine on
-RewriteBase /%APP_PATH%/
+RewriteBase /webapp/remote-files/
 RewriteRule ^$ titan: [R=301,QSA,L]
 RewriteRule ^([a-z]+):$ index.php?server=$1 [QSA,L]
 RewriteRule ^([a-z]+):view(/.*)$ download.php?path=$2&server=$1&view=1 [QSA,L]
