Make PSU::curl() SSL_VERIFYPEER configurable
Dev environments with self-signed certs may need this disabled.

--- a/config.ini.sample
+++ b/config.ini.sample
@@ -13,6 +13,10 @@ uploads_dir = "/web/uploads"
 ; development or production server
 ;dev = 1
 
+; settings used by PSU::curl()
+;[curl]
+;ssl_verifypeer = 1
+
 ;[cdn]
 ;enabled = 1
 
