--- a/webapp/calllog/.htaccess
+++ b/webapp/calllog/.htaccess
@@ -14,6 +14,8 @@ RewriteRule ^new/([a-zA-Z0-9\_\-\.]+)/ new_call.html?caller=$1 [QSA,L]
 RewriteRule ^user/([a-zA-Z0-9\_\-\.]+)$ user/$1/ [R=301,L]
 RewriteRule ^user/([a-zA-Z0-9\_\-\.]+)/ new_call.html?caller=$1 [QSA,L]
 
+RewriteRule ^search/ search.html [QSA,L]
+
 RewriteRule ^calls/(\w+)/ calls.html?in=$1 [QSA,L]
 
 RewriteRule ^files/([0-9]+)/(.*) view_file.html?call_id=$1&view=$2 [QSA,L]
