--- a/webapp/commonapp/.htaccess
+++ b/webapp/commonapp/.htaccess
@@ -1,4 +1,4 @@
-php_value auto_prepend_file /web/pscpages/webapp/commonapp/common.php
+php_value auto_prepend_file ./common.php
 php_value auto_append_file none
 
 RewriteEngine on
