--- a/webapp/cts/.htaccess
+++ b/webapp/cts/.htaccess
@@ -2,6 +2,7 @@ php_value auto_prepend_file none
 php_value auto_append_file none
 
 RewriteEngine on
+RewriteBase /webapp/cts/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php/$1 [L,QSA]
