--- a/webapp/commonapp/.htaccess
+++ b/webapp/commonapp/.htaccess
@@ -2,6 +2,7 @@ php_value auto_prepend_file ./common.php
 php_value auto_append_file none
 
 RewriteEngine on
+RewriteBase /webapp/commonapp/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php/$1 [L,QSA]
