--- a/webapp/ir-reports/.htaccess
+++ b/webapp/ir-reports/.htaccess
@@ -1,7 +1,7 @@
 php_value auto_prepend_file none
 php_value auto_append_file none
 
-RewriteBase /webapp/portal/channel/ir_reports/
+RewriteBase /webapp/ir-reports/
 
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
