Remove hardcoded paths in 3 .htaccess files.
This change also fixes a previously broken style sheet include,
and updates the ecommerce admin app so the new style sheet works mo'
better.

--- a/webapp/ecommerce/report/.htaccess
+++ b/webapp/ecommerce/report/.htaccess
@@ -1,2 +1,2 @@
-php_value auto_prepend_file /web/pscpages/webapp/ecommerce/report/common.php
+php_value auto_prepend_file ./common.php
 php_value auto_append_file none
